--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@
 title: Josh Fernandes' Project Homepage
 email: joshfernandes@mac.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This site will host updates to project I work on.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://joshuamfernandes.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: joshmfernandes
+github_username:  jmfernandes
 
 # Build settings
 markdown: kramdown
