--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Josh Fernandes' Project Homepage
+Ctitle: Josh Fernades' Contact Information
 email: joshfernandes@mac.com
 description: > # this means to ignore newlines until "baseurl:"
   This site will host updates to project I work on.
